arreglo TablaBase
tambien un primer intento (fallido) del boton de cerrar sesion